test/sema/typeck/assign/reassign-param.out
error: unknown identifier `a`.
--> reassign-param.dora:1:19
 | fn f(_a: Int32) { a = 1; }
                     ~
 | 
1 error found.
